# phantom_go_project

./: .gitignore  CMakeLists.txt  README.md  test.sgf
information_set_generator/: main.cpp  phantom_go_features.h
network/: siamese_network.py  simple_train.py  triplet_losses.py
src/: main.cpp
